math-core/src/snapshots/math_core__tests__sub_prime_super.snap
---
source: math-core/src/lib.rs
expression: "f_3'^2"
---
<math>
    <msubsup>
        <mi>f</mi>
        <mn>3</mn>
        <mrow>
            <mo>′</mo>
            <mn>2</mn>
        </mrow>
    </msubsup>
</math>
