math-core/src/snapshots/math_core__tests__sub_sub.snap
---
source: math-core/src/lib.rs
expression: x_2_3 y
---
Position: 3
CannotBeUsedHere {
    got: Underscore,
    correct_place: AfterOpOrIdent,
}
