math-core/src/snapshots/math_core__tests__sub_super_then_prime.snap
---
source: math-core/src/lib.rs
expression: "f_5^2'"
---
Position: 5
CannotBeUsedHere {
    got: Prime,
    correct_place: AfterOpOrIdent,
}
