math-core/src/snapshots/math_core__tests__sub_superscript.snap
---
source: math-core/src/lib.rs
expression: x^2_3
---
<math>
    <msubsup>
        <mi>x</mi>
        <mn>3</mn>
        <mn>2</mn>
    </msubsup>
</math>
