math-core/src/snapshots/math_core__tests__subscript_equal_equal.snap
---
source: math-core/src/lib.rs
expression: x_==4
---
<math>
    <msub>
        <mi>x</mi>
        <mo lspace="0" rspace="0">=</mo>
    </msub>
    <mo>=</mo>
    <mn>4</mn>
</math>
