math-core/src/snapshots/math_core__tests__sum_log.snap
---
source: math-core/src/lib.rs
expression: "\\sum\\log n"
---
<math>
    <mo lspace="0">∑</mo>
    <mo lspace="0" rspace="0.1667em">log</mo>
    <mi>n</mi>
</math>
