math-core/src/snapshots/math_core__tests__sum_pointless_limits.snap
---
source: math-core/src/lib.rs
expression: "\\sum\\limits n"
---
<math>
    <mo movablelimits="false" lspace="0">∑</mo>
    <mi>n</mi>
</math>
