math-core/src/snapshots/math_core__tests__sum_prime.snap
---
source: math-core/src/lib.rs
expression: "\\sum'"
---
<math>
    <mover>
        <mo>∑</mo>
        <mo>′</mo>
    </mover>
</math>
