math-core/src/snapshots/math_core__tests__sum_with_limit.snap
---
source: math-core/src/lib.rs
expression: "\\sum\\limits_{i=1}^N"
---
<math>
    <munderover>
        <mo movablelimits="false" lspace="0">∑</mo>
        <mrow>
            <mi>i</mi>
            <mo>=</mo>
            <mn>1</mn>
        </mrow>
        <mi>N</mi>
    </munderover>
</math>
