math-core/src/snapshots/math_core__tests__sum_with_special_symbol.snap
---
source: math-core/src/lib.rs
expression: "\\sum_{i = 0}^∞ i"
---
<math>
    <munderover>
        <mo lspace="0">∑</mo>
        <mrow>
            <mi>i</mi>
            <mo lspace="0" rspace="0">=</mo>
            <mn>0</mn>
        </mrow>
        <mi>∞</mi>
    </munderover>
    <mi>i</mi>
</math>
